--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             Order food according to nutritions values and get food
             recommendations based on your health conditions.
           </p>
+          <p>Built by David Mbugua</p>
           <div class="vertical-line">scroll</div>
         </div>
         <div>
@@ -194,6 +195,7 @@
             <input type="text" placeholder="Subscribe to our newsletter" />
             <button>Subscribe</button>
           </form>
+          <p class="sign">Built by David Mbugua</p>
         </div>
       </div>
     </footer>
