--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <img class="leavs" src="images/profile-leavs.png" alt="" />
               </div>
               <div class="testimonial-texts">
-                <h4>Solana Rowe</h4>
+                <h4>Solana Imani Rowe</h4>
                 <div class="stars">
                   <div class="filled">&#9733;&#9733;&#9733;</div>
                   &#9733;&#9733;
